...
"menu.createFolder" = "Create Folder";
"menu.delete" = "Delete";
"menu.diff" = "Diff";
"menu.edit" = "Edit";
"menu.exit" = "Exit";
"menu.favorites" = "Favorites";
"menu.file" = "File";
"menu.help" = "Help";
"menu.itemEdit" = "Edit";
"menu.itemView" = "View";
"menu.link" = "Link";
"menu.moveTo" = "Move To...";
"menu.open" = "Open";
...
"time.storeCreationTime" = "Store creation time";
"time.storeLastAccessTime" = "Store last access time";
"time.storeModificationTime" = "Store modification time";
"time.time" = "Time";
"time.timestampPrecision" = "Timestamp precision:";

"toolbar.add" = "Add";
"toolbar.copy" = "Copy";
"toolbar.delete" = "Delete";
"toolbar.extract" = "Extract";
"toolbar.info" = "Info";
"toolbar.move" = "Move";
"toolbar.test" = "Test";
...
